rooting out the last traces of SourceForge

--- a/grk/index.html
+++ b/grk/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Grammar Recovery Kit</title>
-<meta http-equiv="refresh" content="0;url=http://slps.svn.sourceforge.net/viewvc/slps/topics/recovery/grk/">
+<meta http-equiv="refresh" content="0;url=https://github.com/grammarware/slps/tree/master/topics/recovery/grk">
 </head>
 <body>
 </body>
