--- a/w3c/index.html
+++ b/w3c/index.html
@@ -9,6 +9,7 @@
 
 		  var _gaq = _gaq || [];
 		  _gaq.push(['_setAccount', 'UA-3743366-7']);
+		  _gaq.push(['_setDomainName', 'github.com']);
 		  _gaq.push(['_trackPageview']);
 
 		  (function() {
@@ -18,6 +19,7 @@
 		  })();
 
 		</script>
+
 	</head>
 	<body style="background-color:#9CF;">
 		<h1>
@@ -46,7 +48,7 @@
 				<a href="#">...</a>
 			</li>
 			<li>
-				<a href="zoo/">SLPS Grammar Zoo (C, C++, C#, Java, XPath)</a>
+				<a href="../zoo/">SLPS Grammar Zoo (C, C++, C#, Java, XPath)</a>
 			</li>
 		</ul>
 		<hr />
