--- a/testmatch/index.html
+++ b/testmatch/index.html
@@ -9,6 +9,7 @@
 
 		  var _gaq = _gaq || [];
 		  _gaq.push(['_setAccount', 'UA-3743366-7']);
+		  _gaq.push(['_setDomainName', 'github.com']);
 		  _gaq.push(['_trackPageview']);
 
 		  (function() {
@@ -42,20 +43,20 @@
 		</h1>
 		<h3>Test set generation</h3>
 		<ul>
-			<li><a href="https://github.com/grammarware/slps/blob/master/shared/prolog/gbtf.pro">mindepthG, distG, complete, hole, mark, vary</a> (Prolog)
+			<li><a href="http://github.com/grammarware/slps/blob/master/shared/prolog/gbtf.pro">mindepthG, distG, complete, hole, mark, vary</a> (Prolog)
 			</li>
-			<li><a href="https://github.com/grammarware/slps/blob/master/shared/prolog/cli/gbtf.pro">skipuppy, tc, pc, nc, bc, cdbc, main gbtf</a> (Prolog)
+			<li><a href="http://github.com/grammarware/slps/blob/master/shared/prolog/cli/gbtf.pro">skipuppy, tc, pc, nc, bc, cdbc, main gbtf</a> (Prolog)
 			</li>
 		</ul>
 		<h3>ANTLR⇒BGF extraction</h3>
 		<ul>
-			<li><a href="https://github.com/grammarware/slps/blob/master/topics/extraction/antlr/ANTLR2.rsc">ANTLR2 grammar</a> (Rascal)
+			<li><a href="http://github.com/grammarware/slps/blob/master/topics/extraction/antlr/ANTLR2.rsc">ANTLR2 grammar</a> (Rascal)
 			</li>
-			<li><a href="https://github.com/grammarware/slps/blob/master/topics/extraction/antlr/ANTLR3.rsc">ANTLR3 grammar</a> (Rascal)
+			<li><a href="http://github.com/grammarware/slps/blob/master/topics/extraction/antlr/ANTLR3.rsc">ANTLR3 grammar</a> (Rascal)
 			</li>
-			<li><a href="https://github.com/grammarware/slps/blob/master/topics/extraction/antlr/antlrpp.py">ANTLR pretty-printer</a> (Python)
+			<li><a href="http://github.com/grammarware/slps/blob/master/topics/extraction/antlr/antlrpp.py">ANTLR pretty-printer</a> (Python)
 			</li>
-			<li><a href="https://github.com/grammarware/slps/blob/master/topics/extraction/antlr/slps/antlr2bgf/StrippedANTLR.g">Stripped ANTLR specification and its mapping to BGF</a> (ANTLR3)
+			<li><a href="http://github.com/grammarware/slps/blob/master/topics/extraction/antlr/slps/antlr2bgf/StrippedANTLR.g">Stripped ANTLR specification and its mapping to BGF</a> (ANTLR3)
 			</li>
 		</ul>
 		<h3>Grammar sources</h3>
@@ -130,7 +131,7 @@
 		<hr />
 		<div class="last">
 			<strong>This is a part of a bigger initiative called <a href="/">Software Language Processing Suite</a>.</strong><br/>
-			The page is maintained by <a href="http://grammarware.net/">Dr. Vadim Zaytsev</a> a.k.a. @<a href="http://twitter.com/grammarware">grammarware</a>. Last updated: August 2011.
+			The page is maintained by <a href="http://grammarware.net/">Dr. Vadim Zaytsev</a> a.k.a. @<a href="http://twitter.com/grammarware">grammarware</a>. Last updated: December 2012.
 			<br />
 			<a href="http://validator.w3.org/check/referer"><img src="../img/vxhtml.png" alt="XHTML 1.0" /></a>
 			<a href="http://jigsaw.w3.org/css-validator/check/referer"><img src="../img/vcss.png" alt="CSS 2.1" /></a>		</div>
