Add ABS and Modula grammars to the Zoo

--- a/zoo/index.html
+++ b/zoo/index.html
@@ -17,7 +17,22 @@
 							The objective of the Grammar Zoo is to accumulate grammars of contemporary 
 							programming languages, extracted and recovered from language documentation, parser
 							specifications and other artifacts and make them available in a range of formats.
-						</em></div><h2>58 grammars and counting</h2><h1><a href="#ada">Ada</a> — <a href="#c">C</a> — <a href="#cpp">C++</a> — <a href="#cs">C#</a> — <a href="#dart">Dart</a> — <a href="#eiffel">Eiffel</a> — <a href="#fortran">Fortran</a> — <a href="#java">Java</a> — <a href="#javascript">JavaScript</a> — <a href="#modula">Modula</a> — <a href="#pascal">Pascal</a> — <a href="#xpath">XPath</a> — <a href="#wiki">Wiki</a></h1><hr></hr><h2><a name="ada"></a>Ada<br></br><a href="#Ada_95">Ada 95</a> — <a href="#Ada_2005">Ada 2005</a></h2><h3><a name="Ada_95"></a>Ada 95<em> (4 grammars)</em></h3><ul><li>Source: Magnus Kempe, <em>Ada 95 Reference Manual. </em>Hypertext version.  (1994–1997)<span class="links"> [<a href="http://github.com/grammarware/slps/blob/master/topics/grammars/ada/kempe/README.txt">ReadMe</a>]
+						</em></div><h2>60 grammars and counting</h2><h1><a href="#abstract_behavioral_specification_language">ABS</a> — <a href="#ada">Ada</a> — <a href="#c">C</a> — <a href="#cpp">C++</a> — <a href="#cs">C#</a> — <a href="#dart">Dart</a> — <a href="#eiffel">Eiffel</a> — <a href="#fortran">Fortran</a> — <a href="#java">Java</a> — <a href="#javascript">JavaScript</a> — <a href="#modula">Modula</a> — <a href="#pascal">Pascal</a> — <a href="#xpath">XPath</a> — <a href="#wiki">Wiki</a></h1><hr></hr><h2><a name="abstract_behavioral_specification_language"></a>Abstract Behavioral Specification Language<br></br><a href="#ABS">ABS</a></h2><h3><a name="ABS"></a>ABS</h3><ul><li>Source: HATS team, <em>Grammar definition for the ABS language. </em> (May 2012)<span class="links"> [<a href="http://github.com/grammarware/slps/blob/master/topics/grammars/hats/abs/README.txt">ReadMe</a>]
+ [<a href="http://tools.hats-project.eu/">ABS Tool Suite</a>]
+ [<a href="http://github.com/grammarware/slps/blob/master/topics/grammars/hats/abs/source/ABS.flex">GitHub</a>]
+ [<a href="http://github.com/grammarware/slps/blob/master/topics/grammars/hats/abs/source/ABS.parser">GitHub</a>]
+</span></li><li>Extracted grammar: <span class="links">
+				[<a href="hats/abs.html" class="red">Browsable</a>]
+				[<a href="hats/abs.bgf">BGF</a>]
+				[<a href="hats/abs.bnf">EBNF</a>]
+				
+				[<a href="hats/abs.dms">DMS BNF</a>]
+				[<a href="hats/abs.sdf">SDF</a>]
+				[<a href="hats/abs.rsc">Rascal</a>]
+			</span></li><li>Extraction tools: <span class="links"> [<a href="http://github.com/grammarware/slps/wiki/RascalSyntax2BGF">RascalSyntax2BGF</a>]
+ [<a href="http://github.com/grammarware/slps/blob/master/shared/rascal/src/extract/RascalSyntax2BGF.rsc">RascalSyntax2BGF.rsc</a>]
+ [<a href="http://github.com/grammarware/slps/blob/master/shared/tools/rscs2bgf">rscs2bgf</a>]
+</span></li></ul><hr></hr><h2><a name="ada"></a>Ada<br></br><a href="#Ada_95">Ada 95</a> — <a href="#Ada_2005">Ada 2005</a></h2><h3><a name="Ada_95"></a>Ada 95<em> (4 grammars)</em></h3><ul><li>Source: Magnus Kempe, <em>Ada 95 Reference Manual. </em>Hypertext version.  (1994–1997)<span class="links"> [<a href="http://github.com/grammarware/slps/blob/master/topics/grammars/ada/kempe/README.txt">ReadMe</a>]
  [<a href="http://www.adahome.com/rm95/rm9x-toc.html">TOC</a>]
  [<a href="http://www.adahome.com/rm95/rm9x-P.html">Annex</a>]
 </span></li><li>Recovered grammar: <span class="links">
@@ -369,6 +384,7 @@
 </span></li></ul><ul><li>Source: James R. Cordy, <em>Validated TXL Basis Grammar for C# Edition 3. </em>Version 2.1.  (February 2009)<span class="links"> [<a href="http://github.com/grammarware/slps/blob/master/topics/grammars/csharp/cordy/README.txt">ReadMe</a>]
  [<a href="http://www.txl.ca/nresources.html#Grammars">TXL Grammars</a>]
  [<a href="http://github.com/grammarware/slps/blob/master/topics/grammars/csharp/cordy/CSharp/CSharp.grm">GitHub</a>]
+ [<a href="http://github.com/grammarware/slps/blob/master/topics/grammars/csharp/cordy/CSharp/cs.txl">GitHub</a>]
 </span></li><li>Extracted grammar: <span class="links">
 				[<a href="cs/csharp-cordy.html" class="red">Browsable</a>]
 				[<a href="cs/csharp-cordy.bgf">BGF</a>]
@@ -761,7 +777,7 @@
 				[<a href="javascript/js-synytskyy-cordy.rsc">Rascal</a>]
 			</span></li><li>Extraction tools: <span class="links"> [<a href="http://github.com/grammarware/slps/blob/master/topics/grammars/metasyntax/txl/TXLGrammar/Txl/txl.grm">txl.grm</a>]
  [<a href="http://github.com/grammarware/slps/blob/master/topics/extraction/txl/txl2bgf.xslt">txl2bgf.xslt</a>]
-</span></li></ul><hr></hr><h2><a name="modula"></a>Modula<br></br><a href="#Modula-3">Modula-3</a></h2><h3><a name="Modula-3"></a>Modula-3<em> (2 grammars)</em></h3><ul><li>Source: Luca Cardelli, James Donahue, Lucille Glassman, Mick Jordan, Bill Kalsow, Greg Nelson, <em>SRC 052: Modula-3 Report (revised). </em> (1 November 1989), §9 Syntax, pages 56–60<span class="links"> [<a href="http://github.com/grammarware/slps/blob/master/topics/grammars/modula/src-052/README.txt">ReadMe</a>]
+</span></li></ul><hr></hr><h2><a name="modula"></a>Modula<br></br><a href="#Modula-3">Modula-3</a></h2><h3><a name="Modula-3"></a>Modula-3<em> (3 grammars)</em></h3><ul><li>Source: Luca Cardelli, James Donahue, Lucille Glassman, Mick Jordan, Bill Kalsow, Greg Nelson, <em>SRC 052: Modula-3 Report (revised). </em> (1 November 1989), §9 Syntax, pages 56–60<span class="links"> [<a href="http://github.com/grammarware/slps/blob/master/topics/grammars/modula/src-052/README.txt">ReadMe</a>]
 </span></li><li>Extracted grammar: <span class="links">
 				[<a href="modula/src-052.html" class="red">Browsable</a>]
 				[<a href="modula/src-052.bgf">BGF</a>]
@@ -790,6 +806,20 @@
  [<a href="http://github.com/grammarware/slps/blob/master/topics/extraction/sdf/Tokens.asf">Tokens.asf</a>]
 </span></li><li>Recovery tools: <span class="links"> [<a href="http://github.com/grammarware/slps/blob/master/topics/investigation/subgrammar/subgrammar.py">subgrammar.py</a>]
  [<a href="modula/sdf-refactor.html">refactor.xbgf</a>]
+</span></li></ul><ul><li>Source: Michel Dagenais, James R. Cordy, <em>Modula-3 Grammar for TXL-3. </em>Adapted to TXL 10. Rev 21.3.01.  (March 2001)<span class="links"> [<a href="http://github.com/grammarware/slps/blob/master/topics/grammars/modula/dagenais-cordy/README.txt">ReadMe</a>]
+ [<a href="http://www.txl.ca/nresources.html#Grammars">TXL Grammars</a>]
+ [<a href="http://github.com/grammarware/slps/blob/master/topics/grammars/modula/dagenais-cordy/Modula3/Txl/m3.Txl">GitHub</a>]
+ [<a href="http://github.com/grammarware/slps/blob/master/topics/grammars/modula/dagenais-cordy/Modula3/Txl/Modula3.Grm">GitHub</a>]
+</span></li><li>Extracted grammar: <span class="links">
+				[<a href="modula/dagenais-cordy.html" class="red">Browsable</a>]
+				[<a href="modula/dagenais-cordy.bgf">BGF</a>]
+				[<a href="modula/dagenais-cordy.bnf">EBNF</a>]
+				
+				[<a href="modula/dagenais-cordy.dms">DMS BNF</a>]
+				[<a href="modula/dagenais-cordy.sdf">SDF</a>]
+				[<a href="modula/dagenais-cordy.rsc">Rascal</a>]
+			</span></li><li>Extraction tools: <span class="links"> [<a href="http://github.com/grammarware/slps/blob/master/topics/grammars/metasyntax/txl/TXLGrammar/Txl/txl.grm">txl.grm</a>]
+ [<a href="http://github.com/grammarware/slps/blob/master/topics/extraction/txl/txl2bgf.xslt">txl2bgf.xslt</a>]
 </span></li></ul><hr></hr><h2><a name="pascal"></a>Pascal<br></br><a href="#Delphi">Delphi</a> — <a href="#Object_Pascal">Object Pascal</a></h2><h3><a name="Delphi"></a>Delphi<em> (2 grammars)</em></h3><ul><li>Source: Jorge L. Cangas, <em>TXL Grammar for Borland Delphi 2006. </em> (December 2007)<span class="links"> [<a href="http://github.com/grammarware/slps/blob/master/topics/grammars/pascal/delphi/README.txt">ReadMe</a>]
  [<a href="http://www.txl.ca/nresources.html#Grammars">TXL Grammars</a>]
  [<a href="http://github.com/grammarware/slps/blob/master/topics/grammars/pascal/delphi/Delphi2006/delphi.grammar">GitHub</a>]
