--- a/tank/index.html
+++ b/tank/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>The Grammar Tank has merged with the Grammar Zoo</title>
-<meta http-equiv="refresh" content="0;url=http://slps.github.io/zoo/index.html">
+<meta http-equiv="refresh" content="0;url=http://slebok.github.io/zoo/index.html">
 </head>
 <body>
 </body>
