--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 				<a href="faq.html">FAQ (legacy)</a>
 			</li>
 			<li>
-				<strong><a href="http://grammarware.github.com/">Other projects</a> of @<a href="http://grammarware.net">grammarware</a></strong>
+				<strong><a href="http://grammarware.github.io/">Other projects</a> of @<a href="http://grammarware.net">grammarware</a></strong>
 			</li>
 		</ul>
 		<hr />
@@ -195,7 +195,7 @@
 		</p>
 		<hr/>
 		<div class="last">
-			The page is maintained by <a href="http://grammarware.net/">Dr. Vadim Zaytsev</a> a.k.a. @<a href="http://github.com/grammarware">grammarware</a>. Last updated: December 2012.
+			The page is maintained by <a href="http://grammarware.net/">Dr. Vadim Zaytsev</a> a.k.a. @<a href="http://grammarware.github.io/">grammarware</a>. Last updated: December 2012.
 			<br />
 			<a href="http://validator.w3.org/check/referer"><img src="img/vxhtml.png" alt="XHTML 1.0" /></a>
 			<a href="http://jigsaw.w3.org/css-validator/check/referer"><img src="img/vcss.png" alt="CSS 2.1" /></a>		</div>
