--- a/testmatch/index.html
+++ b/testmatch/index.html
@@ -62,51 +62,39 @@
 		<h3>Grammar sources</h3>
 		<ul>
 			<li>ANTLR3 Java 5 by Dieter Habelitz: <span class="links">
-				[<a href="http://www.antlr.org/grammar/1207932239307/Java1_5Grammars/Java.g">Original</a>]
-				[<a href="../zoo/java/java-5-habelitz.html">Browsable</a>]
-				[<a href="../zoo/java/java-5-habelitz.bgf">BGF</a>]
-				[<a href="../zoo/java/java-5-habelitz.bnf">EBNF</a>]
-				[<a href="../zoo/java/java-5-habelitz.dms">DMS BNF</a>]
-				[<a href="../zoo/java/java-5-habelitz.sdf">SDF</a>]
-				[<a href="../zoo/java/java-5-habelitz.rsc">Rascal</a>]
+				[<a href="https://slebok.github.io/zoo/index.html#java_java-5_habelitz">Zoo</a>]
+				[<a href="https://github.com/slebok/zoo/blob/master/zoo/java/java-5/habelitz/fetched/Java.g">Original</a>]
+				[<a href="https://slebok.github.io/zoo/java/java-5/habelitz/extracted/index.html">Browsable</a>]
+				[<a href="https://github.com/slebok/zoo/blob/master/zoo/java/java-5/habelitz/extracted/grammar.bgf">BGF</a>]
 			</span></li>
 			<li>ANTLR3 Java 5 by Terence Parr: <span class="links">
-				[<a href="http://www.antlr.org/grammar/1152141644268/Java.g">Original</a>]
-				[<a href="../zoo/java/java-5-parr.html">Browsable</a>]
-				[<a href="../zoo/java/java-5-parr.bgf">BGF</a>]
-				[<a href="../zoo/java/java-5-parr.bnf">EBNF</a>]
-				[<a href="../zoo/java/java-5-parr.dms">DMS BNF</a>]
-				[<a href="../zoo/java/java-5-parr.sdf">SDF</a>]
-				[<a href="../zoo/java/java-5-parr.rsc">Rascal</a>]
+				[<a href="https://slebok.github.io/zoo/index.html#java_java-5_parr">Zoo</a>]
+				[<a href="https://github.com/slebok/zoo/blob/master/zoo/java/java-5/parr/fetched/Java.g">Original</a>]
+				[<a href="https://slebok.github.io/zoo/java/java-5/parr/extracted/index.html">Browsable</a>]
+				[<a href="https://github.com/slebok/zoo/blob/master/zoo/java/java-5/parr/extracted/grammar.bgf">BGF</a>]
 			</span></li>
 			<li>ANTLR2 Java 5 by Michael Stahl: <span class="links">
-				[<a href="http://www.antlr.org/grammar/1093454600181/java15-grammar.zip">Original</a>]
-				[<a href="../zoo/java/java-5-stahl.html">Browsable</a>]
-				[<a href="../zoo/java/java-5-stahl.bgf">BGF</a>]
-				[<a href="../zoo/java/java-5-stahl.bnf">EBNF</a>]
-				[<a href="../zoo/java/java-5-stahl.dms">DMS BNF</a>]
-				[<a href="../zoo/java/java-5-stahl.sdf">SDF</a>]
-				[<a href="../zoo/java/java-5-stahl.rsc">Rascal</a>]
+				[<a href="https://slebok.github.io/zoo/index.html#java_java-5_stahl">Zoo</a>]
+				[<a href="https://github.com/slebok/zoo/tree/master/zoo/java/java-5/stahl/fetched">Original</a>]
+				[<a href="https://slebok.github.io/zoo/java/java-5/stahl/extracted/index.html">Browsable</a>]
+				[<a href="https://github.com/slebok/zoo/blob/master/zoo/java/java-5/stahl/extracted/grammar.bgf">BGF</a>]
 			</span></li>
 			<li>ANTLR2 Java 5 by Michael Studman: <span class="links">
-				[<a href="http://www.antlr.org/grammar/1090713067533/java15.g">Original</a>]
-				[<a href="../zoo/java/java-5-studman.html">Browsable</a>]
-				[<a href="../zoo/java/java-5-studman.bgf">BGF</a>]
-				[<a href="../zoo/java/java-5-studman.bnf">EBNF</a>]
-				[<a href="../zoo/java/java-5-studman.dms">DMS BNF</a>]
-				[<a href="../zoo/java/java-5-studman.sdf">SDF</a>]
-				[<a href="../zoo/java/java-5-studman.rsc">Rascal</a>]
+				[<a href="https://slebok.github.io/zoo/index.html#java_java-5_studman">Zoo</a>]
+				[<a href="https://github.com/slebok/zoo/blob/master/zoo/java/java-5/studman/fetched/java15.g">Original</a>]
+				[<a href="https://slebok.github.io/zoo/java/java-5/studman/extracted/index.html">Browsable</a>]
+				[<a href="https://github.com/slebok/zoo/blob/master/zoo/java/java-5/studman/extracted/grammar.bgf">BGF</a>]
 			</span></li>
 			<li>TESCOL grammars by Bernd Fischer and his students: <span class="links">
-				[<a href="http://328d.net">Original</a>]
-				[<a href="http://files.328d.net/TESCOL.g">Reference</a>]
-				[<a href="../tank/#test_compiler_language">Extracted</a>]
+				<!-- [<a href="http://328d.net">Original</a>] -->
+				<!-- [<a href="http://files.328d.net/TESCOL.g">Reference</a>] -->
+				[<a href="https://github.com/grammarware/slps/tree/master/topics/testing/gbtf/tests/tescol">Extracted</a>]
 			</span></li>
 		</ul>
 		<h3>Publications</h3>
 		<ul>
 			<li>
-				<a href="http://www.ecs.soton.ac.uk/people/bf">B. Fischer</a>,
+				<a href="https://bfischer.pages.cs.sun.ac.za">B. Fischer</a>,
 				<a href="http://softlang.wikidot.com/rlaemmel:home">R. Lämmel</a>,
 				<a href="http://grammarware.net/">V. Zaytsev</a>. <em>Comparison of Context-free Grammars Based on Parsing Generated Test Data.</em>
 				Pre-proceedings of <a href="http://planet-sl.org/sle2011/">SLE 2011</a>, Braga, Portugal.
@@ -117,7 +105,7 @@
 				</span>
 			</li>
 			<li>
-				<a href="http://www.ecs.soton.ac.uk/people/bf">B. Fischer</a>,
+				<a href="https://bfischer.pages.cs.sun.ac.za">B. Fischer</a>,
 				<a href="http://softlang.wikidot.com/rlaemmel:home">R. Lämmel</a>,
 				<a href="http://grammarware.net/">V. Zaytsev</a>. <em>Comparison of Context-free Grammars Based on Parsing Generated Test Data.</em>
 				Post-proceedings of <a href="http://planet-sl.org/sle2011/">SLE 2011</a>, LNCS, Springer.
@@ -131,7 +119,7 @@
 		<hr />
 		<div class="last">
 			<strong>This is a part of a bigger initiative called <a href="/">Software Language Processing Suite</a>.</strong><br/>
-			The page is maintained by <a href="http://grammarware.net/">Dr. Vadim Zaytsev</a> a.k.a. @<a href="http://twitter.com/grammarware">grammarware</a>. Last updated: December 2012.
+			The page is maintained by <a href="http://grammarware.net/">Dr. Vadim Zaytsev</a> a.k.a. @<a href="http://twitter.com/grammarware">grammarware</a>. Last updated: December 2024.
 			<br />
 			<a href="http://validator.w3.org/check/referer"><img src="../img/vxhtml.png" alt="XHTML 1.0" /></a>
 			<a href="http://jigsaw.w3.org/css-validator/check/referer"><img src="../img/vcss.png" alt="CSS 2.1" /></a>		</div>
